--- a/src/modules/ui/directives/leftMenu/leftMenu.less
+++ b/src/modules/ui/directives/leftMenu/leftMenu.less
@@ -69,6 +69,7 @@ w-left-menu {
     height: 70px;
     bottom: auto;
     display: flex;
+    border-right: 0 none;
 
     .logo-wrapper {
       margin: 5px 10px;
