--- a/src/modules/wallet/modules/transactions/less/transactions.less
+++ b/src/modules/wallet/modules/transactions/less/transactions.less
@@ -38,6 +38,7 @@
     w-select.split-mode {
       display: block;
       width: 100%;
+      background: @color-white;
     }
   }
 }
